--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="style.css">
-  <title>RKST Explorer JS Course</title>
+  <title>Explorer-Stage04-JS-Exercise01</title>
 </head>
 <body>
 
